# neurobot-conversational-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_DEEP_DIVE.md  PROJECT_OVERVIEW.md  README.md  SYSTEM_DESIGN.md  app.py  backend.py  chatbot.db-shm  chatbot.db-wal  frontend_threading.py  frontend_tool.py  neurobot.db-shm  neurobot.db-wal  push_to_hf.py  pyproject.toml  render.yaml  requirements.txt
api/: main.py
docs/: README.md
docs/analysis/: before_vs_after.md  hld.md  lld.md  notes.md
docs/architecture/: SYSTEM_DESIGN.md
docs/project/: PROJECT_OVERVIEW.md
scripts/: run_benchmark.py
src/: neurobot_benchmark.py  neurobot_db.py  neurobot_eval.py  neurobot_graph.py  neurobot_logging.py  neurobot_mcp.py  neurobot_mcp_server.py  neurobot_quality.py  neurobot_rag.py  neurobot_service.py  neurobot_settings.py  neurobot_tool_impl.py  neurobot_tools.py  neurobot_validation.py
tests/: test_benchmark.py  test_quality.py  test_settings.py  test_tenant_namespace.py  test_validation.py
